--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   splashscreen: ^1.2.0
-
+  google_fonts: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -34,6 +34,16 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   animated_text_kit: ^2.2.0
+  flutter_launcher_icons: ^0.7.5
+  flutter_launcher_name: "^0.0.1"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/Acuadoro.png"
+
+flutter_launcher_name:
+  name: "Acuadoro"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
