--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dev_dependencies:
   animated_text_kit: ^2.2.0
   flutter_launcher_icons: ^0.7.5
   flutter_launcher_name: "^0.0.1"
+  flare_flutter: ^2.0.6
 
 flutter_icons:
   android: "launcher_icon"
